--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Sarabun", sans-serif;
   font-weight: 100;
+  font-size: 14px; 
   font-style: normal;
   margin: 0;
   padding: 0;
@@ -12,6 +13,24 @@ body {
   width: 100%; 
   max-width: 100%; 
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 16px; 
+  }
+}
+
+.container {
+  width: 80%; 
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 20px; 
+}
+
+/* img {
+  max-width: 100%; 
+  height: auto; 
+} */ 
 
 html {
   margin: 0;
@@ -86,7 +105,12 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
+  padding: 10px 0; 
   z-index: 1000;
+}
+
+header h1 {
+  float: left; 
 }
 
 nav {
@@ -96,12 +120,81 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: black; 
+  background-color: black;
+}
+
+.nav-menu {
+  list-style: none; 
+  display: flex;
+}
+
+.nav-menu li {
+  margin-right: 20px; 
+}
+
+.nav-menu li a {
+  color: #FFF500; 
+  text-decoration: none; 
+  transition: all 0.3s ease; 
+}
+
+.nav-menu li a:hover {
+  opacity: 0.7;  
+}
+
+.menu-toggle {
+  display: block; 
+  cursor: pointer; 
+  padding: 10px; 
+}
+
+.menu-toggle span {
+  display: block; 
+  height: 3px; 
+  margin-bottom: 5px; 
+  transition: all 0.3s ease; 
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  .nav-menu {
+    display: none; 
+    flex-direction: column; 
+    position: absolute; 
+    top: 60px; 
+    left: 0; 
+    background-color: black; 
+    width: 100%; 
+    padding: 20px 0; 
+    z-index: 1000; 
+  }
+
+  .nav-menu.active {
+    display: flex; 
+  }
+  .menu-toggle.active span:nth-child(1) {
+    transform: translateY(8px) rotate(135deg); 
+  }
+  .menu-toggle.active span:nth-child(2) {
+    opacity: 0; 
+  }
+  .menu-toggle.active span:nth-child(3) {
+    transform: translateT (-8px) rotate(-135deg); 
+  }
 }
 
 .logo a {
   text-decoration: none;
-  font-size: 1.5em;
+  margin: auto;
+  margin-left: 20px;  
+  padding: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 48px;
   font-weight: 200;
   font-family: "Playwrite HR", cursive;
   color: #FFF500;
@@ -125,8 +218,9 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
+  font-family: "Sarabun", sans-serif;
   color: #333;
-  font-weight: 200;
+  font-weight: 100;
   transition: color 0.3s;
   color: #fff500;
 }
@@ -138,6 +232,7 @@ nav ul li a:hover {
 .navMenuItems {
   text-decoration: none;
   color: #333;
+  font-family: "Sarabun", sans-serif;
   font-weight: lighter;
   transition: color 0.3s;
   color: #FFF500;
